--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,16 @@
 name = "prime-rs"
 version = "0.1.0"
 edition = "2021"
+authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
+description = "Command line utilities for finding prime numbers"
+readme = "README.md"
+repository = "https://github.com/babymotte/shanksbot-rs.git"
+license = "MIT"
+keywords = ["prime", "numbers"]
+categories = ["command-line-utilities", "mathematics"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+panic = "abort"
